fix(docker): Set correct Java and Maven versions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Catalogo-CFStyle
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/CFStyle
+spring.datasource.url=jdbc:postgresql://db:5432/CFStyle
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
