--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,20 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-db:
-  image: postgres:16
-  environment:
-    POSTGRES_DB: CFStyle
-    POSTGRES_USER: postgres
-    POSTGRES_PASSWORD: 1234
-  ports:
-    - "5432:5432"
+    depends_on:
+      db:
+        condition: service_healthy
+
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: CFStyle
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1234
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
